<resources>
    <string name="app_name"> ZegoExpressSample </string>
    <string name="tx_log"> LOG </string>
    <string name="tx_web_refresh_hint"> refreshing the current page </string>
    <string name="menu"> menu </string>
    <string name="tx_menu_copy_link"> Copy link </string>
    <string name="tx_copy_success"> has been copied to the pasteboard </string>
    <string name="tx_initsdk_title"> Step 1 Initialize SDK </string>
    <string name="tx_get_appid"> Click to get appID and appSign </string>
    <string name="tx_get_appid_guide"> Get appID and appSign </string>
    <string name="tx_initsdk"> Initialization SDK </string>
    <string name="tx_code_demo"> code demo </string>
    <string name="tx_mirror"> Mirror </string>
    <string name="tx_login_console"> Login to the console </string>
    <string name="tx_capture_mirror"> Preview mirror </string>
    <string name="tx_hardware_decode_describe"> After the hardware solution is turned on, the SDK will use the GPU to process video decoding, which will greatly reduce the CPU usage of the App,
To achieve the effect of power saving and no heat. </string>
    <string name="tx_hardware_encode_describe"> After hard coding is enabled, the SDK will use the GPU to process video encoding, which will greatly reduce the CPU usage of the App,
To achieve the effect of power saving and no heat. </string>
    <string name="userid_describe"> !!! The userID must be unique. It can be associated with the app business background account. UserID can also facilitate ZEGO technical support to help locate online problems. It is recommended to define a meaningful userID </string>
    <string name="appid_describe"> appID and appSign are assigned to each app by ZEGO. For security reasons, it is recommended to store appSign in the app\'s business background and obtain it from the background when using it. </string>
    <string name="app_sign_describe"> appID and appSign are assigned to each app by ZEGO. For security reasons, it is recommended to store appSign in the app\'s business background and obtain it from the background when using it. </string>
    <string name="user_name_describe"> userName only supports any format string with a length not exceeding 256 bytes </string>
    <string name="room_id_describe"> roomID is a room ID, which is represented by a string no longer than 128 bytes, and the room ID needs to be globally unique </string>
    <string name="tx_test_env"> Test environment </string>
    <string name="tx_init_success"> Initialization of SDK is complete </string>
    <string name="tx_init_failure"> Failed to initialize SDK </string>
    <string name="tx_login_room_success"> Login room completed </string>
    <string name="tx_login_room_ing"> Login ... </string>
    <string name="tx_login_room_failure"> Failed to log in to the room </string>
    <string name="tx_logout_room_finish"> logout completion is complete </string>
    <string name="tx_publish_title"> Push stream </string>
    <string name="tx_publish_success"> Push stream completed </string>
    <string name="tx_publishing"> Pushing stream </string>
    <string name="tx_publish_fail"> Push stream failed </string>
    <string name="tx_stop_publish_finish"> Stop pushing stream completion </string>
    <string name="tx_start_live"> Start pushing stream </string>
    <string name="tx_end_live"> End push stream </string>
    <string name="tx_play_title"> Play Stream</string>
    <string name="tx_play_success"> pull stream completed </string>
    <string name="tx_playing"> Pulling stream </string>
    <string name="tx_play_fail"> Pull stream failed </string>
    <string name="tx_stop_play"> stop pulling stream </string>
    <string name="tx_enter_live"> Start pull stream </string>
    <string name="tx_leave_live"> End pull stream </string>
    <string name="tx_id_cannot_null"> Room ID or stream ID cannot be empty </string>
    <string name="tx_mic_state"> microphone </string>
    <string name="tx_camera"> camera </string>
    <string name="tx_speaker"> speaker </string>
    <string name="tx_common"> Commonly used functions </string>
    <string name="tx_login_room_title"> Step 2 Log in to the room </string>
    <string name="tx_login_room"> Log in to the room </string>
    <string name="tx_login_room_guide"> Login room guide </string>
    <string name="tx_stream_id_cannot_null"> streamID cannot be empty </string>
    <string name="tx_start_publish_title"> Start pushing stream </string>
    <string name="tx_room_id_is_no_null"> roomID cannot be empty </string>
    <string name="stream_id_describe"> The stream name of each user must be unique, that is, the stream name must be globally unique. The SDK push and pull streams are identified based on the stream ID, and only support numbers up to 256 bytes, underscores, and letters </string>
    <string name="tx_publish_guide"> Push stream document guide </string>
    <string name="tx_play_guide"> Laliu document guide </string>
    <string name="tx_start_publish"> Initiate push stream </string>
    <string name="tx_confirm_publish"> Confirm push stream </string>
    <string name="tx_start_play"> Start pull stream </string>
    <string name="play_volume"> pull stream volume </string>
    <string name="tx_capture_device"> Modify the camera capture device </string>
    <string name="hardware_encode"> Hard-code switch (setting before push flow takes effect) </string>
    <string name="front_facing_camera"> Front camera </string>
    <string name="tx_set_play_view_mode_failure"> Setting failed, please set after pulling stream </string>
    <string name="tx_current_stream_delete"> the other party has stopped pushing the stream </string>
    <string name="share_log"> Share log </string>
    <string name="log"> log </string>
    <string name="back"> Back </string>
    <string name="share"> Share </string>
    <string name="loading"> Loading </string>
    <string name="publish_stream"> Push stream </string>
    <string name="play_stream"> Pull stream </string>
    <string name="login_room"> Enter the room </string>
    <string name="logout_room"> Exit the room </string>
    <string name="start_publish_main"> Start pushing mainstream </string>
    <string name="start_publish_aux"> Start pushing auxiliary stream </string>
    <string name="stream_id_equal_error"> Main stream and auxiliary stream stream id can not be the same </string>
    <string name="stop_publish_main"> Stop pushing mainstream </string>
    <string name="stop_publish_aux"> stop pushing auxiliary stream </string>
    <string name="main_streamId_null"> mainstream streamId is empty </string>
    <string name="aux_streamId_null"> Auxiliary streamId is empty </string>
    <string name="start_play_stream"> Start pulling stream </string>
    <string name="stop_play_stream"> stop pulling stream </string>
    <string name="streamId_null"> streamId is empty </string>
    <string name="play_streamId_equal"> Cannot perform multiple pull-stream operations with the same streamId, you need to stop the previous pull-stream operations with the same id </string>
    <string name="stream_request"> Requesting </string>
    <string name="room_unconnect"> Room status: not connected yet </string>
    <string name="no_publish"> Not pushing stream </string>
    <string name="room_connect"> Room status: connected </string>
    <string name="publishing"> Pushing stream </string>
    <string name="no_play"> Not in the stream </string>
    <string name="playing"> Pulling stream </string>
    <string name="create_zego_engine"> create ZegoEngine! ! </string>
    <string name="demo_version"> Demo version: </string>
    <string name="sdk_version"> SDK version: </string>
    <string name="save_alert"> Whether to save the current content </string>
    <string name="save_success"> Save successfully! ! </string>
    <string name="save_cancel"> Cancel save </string>
    <string name="reset_alert"> whether to reset the current content </string>
    <string name="reset_success"> Reset succeeded! ! </string>
    <string name="reset_cancel"> Cancel reset </string>
    <string name="app_sign_cannot_be_null"> appkey cannot be null </string>
    <string name="tx_title"> Sample code </string>
    <string name="tx_module_basic"> basic communication </string>
    <string name="tx_module_mixer"> mix stream </string>
    <string name="tx_module_publish"> Push stream </string>
    <string name="tx_module_play">Play Steam</string>
    <string name="tx_module_custom_cdn_publish"> Custom CDN push stream </string>
    <string name="tx_module_im"> IM </string>
    <string name="tx_module_soundlevelandspectrum"> sound and audio spectrum </string>
    <string name="tx_module_mediaplayer"> Media player </string>
    <string name="tx_module_custom_render"> Custom rendering </string>
    <string name="tx_module_custom_capture"> Custom capture </string>
    <string name="tx_title_quickstart"> Quick start </string>
    <string name="tx_title_advance"> Advanced features </string>
    <string name="txt_title_aux"> Push multi-channel stream </string>
    <string name="txt_title_video_talk"> VideoTalk video call </string>
    <string name="room_id"> Room ID: </string>
    <string name="user_id"> User ID: </string>
    <string name="tx_setting"> settings </string>
    <string name="tx_copyed"> Copyed </string>
    <string name="tx_save"> Save </string>
    <string name="tx_appid"> AppID: </string>
    <string name="tx_appsign"> AppSign: </string>
    <string name="tx_env"> Environment (please select the environment corresponding to AppID) </string>
    <string name="tx_init_sdk"> Initialize SDK </string>
    <string name="tx_init_sdk_ok"> Successful initialization SDK </string>
    <string name="tx_init_sdk_fail"> Failed to initialize SDK </string>
    <string name="tx_uninit_sdk"> release SDK </string>
    <string name="tx_uninit_sdk_ok"> release SDK successfully </string>
    <string name="tx_uninit_sdk_fail"> Failed to release SDK </string>
    <string name="tx_sdk_not_init"> Please initialize SDK first </string>
    <string name="tx_basic_login_room"> Enter the room </string>
    <string name="tx_basic_logout_room"> exit the room </string>
    <string name="tx_basic_login_room_ok"> Call to enter the room interface successfully </string>
    <string name="tx_basic_logout_room_ok"> Call and exit room interface succeeded </string>
    <string name="tx_basic_publish"> Push stream </string>
    <string name="tx_basic_stop_publish"> stop pushing stream </string>
    <string name="tx_basic_publish_ok"> Successful call to push stream interface </string>
    <string name="tx_basic_stop_publish_ok"> Successfully called stop push flow interface </string>
    <string name="tx_basic_preview_ok"> Call to start preview successfully </string>
    <string name="tx_basic_play"> play stream </string>
    <string name="tx_basic_stop_play"> stop pulling stream </string>
    <string name="tx_basic_play_ok"> Successful call to pull stream interface </string>
    <string name="tx_basic_stop_play_ok"> Successful call to stop pull stream interface </string>
    <string name="video_interrupt"> Video interrupted, reconnecting </string>
    <string name="title_app_name"> Mediaplayer </string>
    <string name="local_res_error"> Abnormal loading of local resources: </string>
    <string name="net_res_error"> Abnormal loading of network resources: </string>
    <string name="tx_mixer_publish_ok"> Push stream successfully </string>
    <string name="tx_mixer_publish_request"> requesting push stream </string>
    <string name="tx_video_filter">Custom Video preprocessing</string>
    <string name="tx_filter_type">Select the type of preprocessing transfer data</string>
    <string name="tx_sync_gl_texture_2d">BUFFER_TYPE_SYNC_GL_TEXTURE_2D</string>
    <string name="tx_mem_rgba32">BUFFER_TYPE_MEM</string>
    <string name="tx_asyn_i420_mem">BUFFER_TYPE_ASYNC_I420_MEM</string>
    <string name="tx_surface_texture">BUFFER_TYPE_SURFACE_TEXTURE</string>
</resources>