<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ebeef5"
        android:orientation="vertical">

        <com.zego.common.widgets.TitleLayout
            app:name="@string/tx_video_filter"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <Button
                android:id="@+id/go_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/ic_round_left" />

        </com.zego.common.widgets.TitleLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:textStyle="bold"
                android:text="@string/tx_filter_type" />

            <RadioGroup
                android:id="@+id/rgFilterTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RadioSyncTexture2D"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tx_sync_gl_texture_2d" />

                    <ImageView
                        android:id="@+id/syncTexture2D_describe"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@mipmap/ic_mark" />

                </LinearLayout>

                <!--                <LinearLayout-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:orientation="horizontal">-->

                <!--                    <RadioButton-->
                <!--                        android:id="@+id/RadioMemTexture2D"-->
                <!--                        android:layout_width="0dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_weight="1"-->
                <!--                        android:checked="true"-->
                <!--                        android:text="@string/tx_mem_gl_texture_2d" />-->

                <!--                    <ImageView-->
                <!--                        android:id="@+id/memTexture2D_describe"-->
                <!--                        android:layout_width="32dp"-->
                <!--                        android:layout_height="32dp"-->
                <!--                        android:background="@mipmap/ic_mark" />-->

                <!--                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RadioRGBA32Mem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tx_mem_rgba32" />

                    <ImageView
                        android:id="@+id/rgba32Mem_describe"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@mipmap/ic_mark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RadioI420Mem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tx_asyn_i420_mem" />

                    <ImageView
                        android:id="@+id/i420Mem_describe"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@mipmap/ic_mark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RadioSurfaceTexture"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/tx_surface_texture" />

                    <ImageView
                        android:id="@+id/surfaceTexture_describe"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@mipmap/ic_mark" />

                </LinearLayout>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="roomID:"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.zego.common.widgets.CustomEditText
                android:id="@+id/ed_room_id"
                app:key="room_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@color/white_color"
                android:hint="请输入roomID"
                android:padding="8dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:autoLink="all"
                android:gravity="center_vertical"
                android:text="@string/room_id_describe" />

            <com.zego.common.widgets.CustomEditText
                android:id="@+id/ed_stream_id"
                app:key="stream_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@color/white_color"
                android:hint="请输入streamID"
                android:padding="8dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:autoLink="all"
                android:gravity="center_vertical"
                android:text="@string/stream_id_describe" />

            <TextView
                android:id="@+id/authpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="@dimen/text_size_32"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="onClickLoginRoomAndPublish"
                android:text="@string/tx_login_room" />

        </LinearLayout>
    </LinearLayout>
</layout>